# rust_core

./: Cargo.toml
.claude/: settings.local.json
src/: lib.txt
src/core/: config.rs  events.rs  logger.rs  mod.rs  types.rs
src/layer1/: mod.rs  rest_client.rs  time_synchronizer.rs  user_data_stream.rs  websocket.rs
src/layer2/: market_data_store.rs  metrics.rs  mod.rs  orderbook.rs  parser.rs  pipeline.rs  synchronizer.rs
src/layer3/: mod.rs
src/layer3/binance_data/: binance_data_aggregator.rs  insurance_fund_tracker.rs  long_short_tracker.rs  mod.rs  open_interest_tracker.rs  taker_volume_tracker.rs  top_trader_tracker.rs
src/layer3/common/: event_types.rs  mod.rs  time_windows.rs
src/layer3/kline/: bb_tracker.rs  candle_tracker.rs  ema_tracker.rs  kline_aggregator.rs  macd_tracker.rs  mod.rs  rsi_tracker.rs  trend_tracker.rs
src/layer3/liquidation/: cascade_tracker.rs  cluster_tracker.rs  directional_tracker.rs  impact_tracker.rs  individual_tracker.rs  liquidation_aggregator.rs  mod.rs
src/layer3/markprice/: divergence_tracker.rs  funding_tracker.rs  liquidation_zone_tracker.rs  markprice_aggregator.rs  mod.rs  premium_tracker.rs
src/layer3/orderbook/: imbalance_tracker.rs  liquidity_tracker.rs  microprice_tracker.rs  mod.rs  orderbook_aggregator.rs  orderflow_tracker.rs  spread_tracker.rs  wall_tracker.rs
src/layer3/trade/: delta.rs  mod.rs  patterns.rs  profile.rs  streaks.rs  trade_aggregator.rs  volume.rs  vwap.rs
tests/: e2e_flow_test.rs
