[package]
name = "liquidity_hunt"
version = "0.1.0"
edition = "2021"
authors = ["Liquidity Hunt Team"]
description = "HFT Trading Bot for Binance Futures - Pure Rust Implementation"
license = "MIT"
readme = "README.md"
keywords = ["trading", "binance", "futures", "hft", "cryptocurrency"]
categories = ["finance", "api-bindings", "web-programming::websocket"]

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography (HMAC-SHA256 for signing)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Concurrency
parking_lot = { version = "0.12", features = ["send_guard"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for event IDs
uuid = { version = "1.6", features = ["v4"] }

# Ordered Float for BTreeMap keys
ordered-float = { version = "4.2", features = ["serde"] }

# Once lock for singletons
# (Already in std since 1.70, but we include for compatibility)

[dev-dependencies]
# Testing
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

# [[bench]]
# name = "orderbook_bench"
# harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
